--- a/sass/components/_cta.scss
+++ b/sass/components/_cta.scss
@@ -22,6 +22,7 @@
         padding: $padding-cta-big;
         height: $cta-big-height;
         line-height: $cta-big-height;
+        min-width: 171px;
     }
     &-small {
         padding: $padding-cta-small;
